--- a/FortiadcLab/fortiadc_lab_server/requirements.txt
+++ b/FortiadcLab/fortiadc_lab_server/requirements.txt
@@ -1,4 +1,9 @@
 Django==1.11
+gyp==0.1
+MySQL-python==1.2.5
+pycurl==7.43.0
+python-apt==1.1.0b1
+pytz==2017.2
 requests==2.13.0
 six==1.9.0
-
+uWSGI==2.0.15
