--- a/FortiadcLab/fortiadc_lab_server/requirements.txt
+++ b/FortiadcLab/fortiadc_lab_server/requirements.txt
@@ -1,7 +1,12 @@
 Django==1.11
+django-crispy-forms==1.6.1
+django-filter==1.0.2
+djangorestframework==3.6.2
+meld3==1.0.2
 MySQL-python==1.2.5
 pycurl==7.43.0
 python-apt==1.1.0b1
 pytz==2017.2
 six==1.10.0
+supervisor==3.3.1
 uWSGI==2.0.15
